[package]
name = "boardbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
image = "0.24.5"
reqwest = { version = "0.11.14", features = ["blocking"] }
ril = { version = "0.9.0", features = ["all-pure"] }
serde = { version = "1.0.152", features = ["std", "derive"] }
serde_yaml = "0.9.17"
thiserror = "1.0.38"
url = "2.3.1"
